[package]
name = "game_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.28"
wgpu = "0.15"
egui = { version = "0.22", features = ["glow"] }
egui-winit = "0.22"
serde = { version = "1.0", features = ["derive"] }
lmstudio_client = "0.1"  # Corrected from llama_cpp to match the AI module
pollster = "0.3"
rand = "0.8"
