[package]
name = "game_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.28"
wgpu = "0.15"
egui = "0.22"
egui-winit = "0.22"
egui-wgpu = "0.22"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
pollster = "0.3"
rand = "0.8"
bytemuck = { version = "1.12", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
image = "0.24"
